[metadata]
name = timesys
version = 1.0.1
author = Timesys Corporation
author_email = vigiles@timesys.com
description = Timesys LinuxLink APIs
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/TimesysGit/timesys-api-toolkit
project_urls =
    Bug Tracker = https://github.com/TimesysGit/timesys-api-toolkit/issues
classifiers =
    Programming Lanauge :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: POSIX

[options]
package_dir =
    = src/lib
packages = find:
python_requires = >=3.6
install_requires =
    requests
scripts =
    src/bin/vigiles

[options.packages.find]
where = src/lib

[options.extras_require]
docs =
    sphinx
    sphinx-rtd-theme
    numpydoc

